--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       enctype="multipart/form-data"
     >
       <input type="file" name="avatar" multiple />
+      <input type="file" name="doc" multiple />
       <input type="submit" value="Submit" />
     </form>
   </body>
